plugins {
    id 'java'
}

group = 'ind.venture'
version = '0.0.1-SNAPSHOT'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {

}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    dependencies {
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }
}
tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}
